Gateway Error Fixes